--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Sederhana</title>
+    <title>Daftar Harga Accel UserBot</title>
     <style>
-        /* Gaya CSS langsung di dalam HTML */
+        /* Gaya CSS */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -17,23 +17,40 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            max-width: 500px;
             margin: auto;
         }
         h1 {
+            color: #007bff;
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        .price-list {
+            text-align: left;
+            margin-top: 20px;
+        }
+        .price-item {
+            background: #f9f9f9;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .price-item p {
+            margin: 0;
+            font-size: 18px;
             color: #333;
         }
-        p {
-            color: #666;
-        }
         .button {
-            display: inline-block;
-            padding: 10px 20px;
+            display: block;
+            padding: 10px;
             background: #007bff;
             color: white;
             text-decoration: none;
             border-radius: 5px;
+            text-align: center;
             margin-top: 10px;
+            transition: 0.3s;
         }
         .button:hover {
             background: #0056b3;
@@ -43,9 +60,24 @@
 <body>
 
     <div class="container">
-        <h1>Halo, Dunia!</h1>
-        <p>Ini adalah website sederhana dengan HTML dan CSS.</p>
-        <a href="https://github.com" class="button">Kunjungi GitHub</a>
+        <h1>Daftar Harga Accel UserBot</h1>
+        <div class="price-list">
+            <div class="price-item">
+                <p><strong>Harga 1 Bulan UserBot</strong></p>
+                <p>IDR 10.000</p>
+                <a href="https://t.me/OwnTelegramX" class="button">Beli UserBot</a>
+            </div>
+            <div class="price-item">
+                <p><strong>Harga 2 Bulan UserBot</strong></p>
+                <p>IDR 20.000</p>
+                <a href="https://t.me/OwnTelegramX" class="button">Beli UserBot</a>
+            </div>
+            <div class="price-item">
+                <p><strong>Harga 3 Bulan UserBot</strong></p>
+                <p>IDR 30.000</p>
+                <a href="https://t.me/OwnTelegramX" class="button">Beli UserBot</a>
+            </div>
+        </div>
     </div>
 
 </body>
