--- a/index.html
+++ b/index.html
@@ -46,7 +46,92 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        
+
+        /* Captcha */
+        .captcha-container {
+            text-align: center;
+            margin-top: 20px;
+            display: none; /* Sembunyikan dulu */
+        }
+
+        .captcha-box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            padding: 15px;
+            background: white;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 250px;
+            margin: auto;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        .captcha-box:hover {
+            background: #f8f8f8;
+        }
+
+        .captcha-checkbox {
+            display: none; /* Sembunyikan checkbox default */
+        }
+
+        .custom-checkbox {
+            width: 20px;
+            height: 20px;
+            border: 2px solid #007bff;
+            border-radius: 3px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            color: white;
+            font-weight: bold;
+        }
+
+        .captcha-checkbox:checked + .custom-checkbox {
+            background: #007bff;
+            content: "✔";
+        }
+
+        /* Modal (Popup) */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .modal-content {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            max-width: 300px;
+        }
+
+        .modal button {
+            padding: 10px 20px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+
+        .modal button:hover {
+            background: #0056b3;
+        }
+
         /* Kotak utama (sembunyikan dulu) */
         .container {
             background: white;
@@ -99,32 +184,6 @@
             background: #0056b3;
         }
 
-        /* Captcha */
-        .captcha-container {
-            text-align: center;
-            margin-top: 20px;
-            display: none; /* Sembunyikan dulu */
-        }
-
-        .captcha-label {
-            font-size: 16px;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 10px;
-            display: block;
-        }
-
-        .captcha-box {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .captcha-checkbox {
-            width: 20px;
-            height: 20px;
-        }
     </style>
 </head>
 <body>
@@ -138,9 +197,18 @@
     <!-- Captcha -->
     <div class="captcha-container" id="captcha">
         <label class="captcha-label">Verify that you are human</label>
-        <div class="captcha-box">
+        <div class="captcha-box" onclick="toggleCheckbox()">
             <input type="checkbox" id="captcha-checkbox" class="captcha-checkbox">
+            <div class="custom-checkbox" id="custom-checkbox"></div>
             <span>I'm not a robot</span>
+        </div>
+    </div>
+
+    <!-- Modal Popup -->
+    <div class="modal" id="modal">
+        <div class="modal-content">
+            <p>You've been doing Verify Captcha now.</p>
+            <button onclick="hideModal()">OK</button>
         </div>
     </div>
 
@@ -153,36 +221,37 @@
                 <p>IDR 10.000</p>
                 <a href="https://t.me/OwnTelegramX" class="button">Beli UserBot</a>
             </div>
-            <div class="price-item">
-                <p><strong>Harga 2 Bulan UserBot</strong></p>
-                <p>IDR 20.000</p>
-                <a href="https://t.me/OwnTelegramX" class="button">Beli UserBot</a>
-            </div>
-            <div class="price-item">
-                <p><strong>Harga 3 Bulan UserBot</strong></p>
-                <p>IDR 30.000</p>
-                <a href="https://t.me/OwnTelegramX" class="button">Beli UserBot</a>
-            </div>
         </div>
     </div>
 
     <script>
-        // Tampilkan loading selama 4 detik
-        setTimeout(function() {
-            document.getElementById("loading").style.opacity = "0"; // Hilangkan loading dengan efek
-            setTimeout(function() {
-                document.getElementById("loading").style.display = "none"; // Sembunyikan loading
-                document.getElementById("captcha").style.display = "block"; // Tampilkan captcha
-            }, 500); // Delay sebelum loading benar-benar hilang
-        }, 4000); // 4 detik loading
+        function toggleCheckbox() {
+            let checkbox = document.getElementById("captcha-checkbox");
+            let customCheckbox = document.getElementById("custom-checkbox");
 
-        // Jika captcha dicentang, tampilkan konten utama
-        document.getElementById("captcha-checkbox").addEventListener("change", function() {
-            if (this.checked) {
-                document.getElementById("captcha").style.display = "none"; // Sembunyikan captcha
-                document.getElementById("content").style.display = "block"; // Tampilkan daftar harga
+            checkbox.checked = !checkbox.checked;
+
+            if (checkbox.checked) {
+                customCheckbox.innerHTML = "✔";
+                document.getElementById("modal").style.display = "flex"; // Tampilkan modal
+            } else {
+                customCheckbox.innerHTML = "";
             }
-        });
+        }
+
+        function hideModal() {
+            document.getElementById("modal").style.display = "none"; // Sembunyikan modal
+            document.getElementById("captcha").style.display = "none"; // Sembunyikan captcha
+            document.getElementById("content").style.display = "block"; // Tampilkan daftar harga
+        }
+
+        setTimeout(function() {
+            document.getElementById("loading").style.opacity = "0";
+            setTimeout(function() {
+                document.getElementById("loading").style.display = "none";
+                document.getElementById("captcha").style.display = "block";
+            }, 500);
+        }, 4000);
     </script>
 
 </body>
