--- a/index.html
+++ b/index.html
@@ -13,45 +13,17 @@
             padding: 50px;
             margin: 0;
         }
-        
-        /* Animasi Loading */
-        .loading-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: white;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            transition: opacity 0.5s ease-out;
-            font-size: 18px;
-            font-weight: bold;
-            color: #007bff;
-        }
-        
-        .loading-spinner {
-            width: 50px;
-            height: 50px;
-            border: 5px solid rgba(0, 0, 255, 0.3);
-            border-top: 5px solid #007bff;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin-bottom: 10px;
-        }
 
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* Captcha */
+        /* Captcha Container */
         .captcha-container {
             text-align: center;
             margin-top: 20px;
-            display: none; /* Sembunyikan dulu */
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 300px;
+            margin: auto;
         }
 
         .captcha-box {
@@ -63,18 +35,12 @@
             background: white;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 250px;
-            margin: auto;
             cursor: pointer;
-            transition: background 0.3s;
-        }
-
-        .captcha-box:hover {
-            background: #f8f8f8;
+            user-select: none;
         }
 
         .captcha-checkbox {
-            display: none; /* Sembunyikan checkbox default */
+            display: none; /* Sembunyikan checkbox asli */
         }
 
         .custom-checkbox {
@@ -88,11 +54,14 @@
             font-size: 16px;
             color: white;
             font-weight: bold;
+            background: white;
         }
 
         .captcha-checkbox:checked + .custom-checkbox {
             background: #007bff;
-            content: "✔";
+            color: white;
+            font-size: 16px;
+            font-weight: bold;
         }
 
         /* Modal (Popup) */
@@ -188,12 +157,6 @@
 </head>
 <body>
 
-    <!-- Animasi Loading -->
-    <div class="loading-container" id="loading">
-        <div class="loading-spinner"></div>
-        <p>Wait... Loading Access</p>
-    </div>
-
     <!-- Captcha -->
     <div class="captcha-container" id="captcha">
         <label class="captcha-label">Verify that you are human</label>
@@ -232,10 +195,10 @@
             checkbox.checked = !checkbox.checked;
 
             if (checkbox.checked) {
-                customCheckbox.innerHTML = "✔";
+                customCheckbox.innerHTML = "✔"; // Tampilkan centang
                 document.getElementById("modal").style.display = "flex"; // Tampilkan modal
             } else {
-                customCheckbox.innerHTML = "";
+                customCheckbox.innerHTML = ""; // Hapus centang
             }
         }
 
@@ -244,14 +207,6 @@
             document.getElementById("captcha").style.display = "none"; // Sembunyikan captcha
             document.getElementById("content").style.display = "block"; // Tampilkan daftar harga
         }
-
-        setTimeout(function() {
-            document.getElementById("loading").style.opacity = "0";
-            setTimeout(function() {
-                document.getElementById("loading").style.display = "none";
-                document.getElementById("captcha").style.display = "block";
-            }, 500);
-        }, 4000);
     </script>
 
 </body>
