--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             min-height: 100vh;
         }
 
-        /* Container utama */
+        /* Kontainer utama (flexbox) */
         .main-container {
             display: flex;
-            align-items: center;
+            align-items: flex-start; /* Supaya sejajar ke atas */
             gap: 20px;
         }
 
@@ -89,24 +89,25 @@
             color: #333;
         }
 
-        /* Konten utama (tersembunyi dulu) */
+        /* Konten utama */
         .container {
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 500px;
-            display: none; /* Sembunyikan dulu */
+            text-align: left; /* Supaya daftar harga rata kiri */
+            display: none;
         }
 
         h1 {
             color: #007bff;
             font-size: 24px;
             margin-bottom: 10px;
+            text-align: center;
         }
 
         .price-list {
-            text-align: left;
             margin-top: 20px;
         }
 
