--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            text-align: center;
             padding: 50px;
             margin: 0;
             display: flex;
@@ -21,8 +20,9 @@
         /* Kontainer utama (flexbox) */
         .main-container {
             display: flex;
-            align-items: flex-start; /* Supaya sejajar ke atas */
+            align-items: flex-start;
             gap: 20px;
+            display: none; /* Sembunyikan dulu */
         }
 
         /* Sidebar kiri untuk logo */
@@ -96,8 +96,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 500px;
-            text-align: left; /* Supaya daftar harga rata kiri */
-            display: none;
+            text-align: left;
         }
 
         h1 {
