--- a/index.html
+++ b/index.html
@@ -17,36 +17,55 @@
             min-height: 100vh;
         }
 
-        /* Kontainer utama (flexbox) */
+        /* Kontainer utama */
         .main-container {
             display: flex;
-            align-items: flex-start;
+            align-items: center;
+            justify-content: space-between;
             gap: 20px;
-            display: none; /* Sembunyikan dulu */
+            display: none;
+            width: 100%;
+            max-width: 800px;
         }
 
-        /* Sidebar kiri untuk logo */
-        .sidebar {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
+        /* Logo Instagram & Telegram */
+        .logo-container {
+            position: relative;
+            width: 80px;
+            height: 80px;
         }
 
-        .sidebar a {
-            display: block;
-            width: 50px;
-            height: 50px;
-            transition: transform 0.3s;
-        }
-
-        .sidebar a:hover {
-            transform: scale(1.1);
-        }
-
-        .sidebar img {
+        .logo-container img {
             width: 100%;
             height: auto;
             border-radius: 10px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: transform 0.3s;
+        }
+
+        .logo-container:hover img {
+            transform: translate(-50%, -50%) scale(1.1);
+        }
+
+        /* Efek lingkaran animasi */
+        .circle-loader {
+            width: 100%;
+            height: 100%;
+            border: 5px solid rgba(0, 123, 255, 0.3);
+            border-top: 5px solid #007bff;
+            border-radius: 50%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
         /* Animasi Loading */
@@ -74,12 +93,6 @@
             margin-bottom: 15px;
         }
 
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* Teks Loading */
         .loading-text {
             background: #f9f9f9;
             padding: 15px;
@@ -89,21 +102,20 @@
             color: #333;
         }
 
-        /* Konten utama */
+        /* Konten daftar harga */
         .container {
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            text-align: left;
+            text-align: center;
+            flex: 1;
         }
 
         h1 {
             color: #007bff;
             font-size: 24px;
             margin-bottom: 10px;
-            text-align: center;
         }
 
         .price-list {
@@ -151,18 +163,16 @@
 
     <!-- Konten Website -->
     <div class="main-container" id="content">
-
-        <!-- Sidebar dengan logo -->
-        <div class="sidebar">
+        
+        <!-- Logo Instagram di Kiri -->
+        <div class="logo-container">
+            <div class="circle-loader"></div>
             <a href="https://instagram.com/accelgyz" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
             </a>
-            <a href="https://t.me/OwnTelegramX" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-            </a>
         </div>
 
-        <!-- Konten daftar harga -->
+        <!-- Daftar Harga -->
         <div class="container">
             <h1>Daftar Harga Accel UserBot</h1>
             <div class="price-list">
@@ -171,13 +181,17 @@
                 <div class="price-item"><p><strong>Harga 3 Bulan</strong></p><p>IDR 30.000</p><a href="https://t.me/OwnTelegramX" class="button">Beli</a></div>
                 <div class="price-item"><p><strong>Harga 4 Bulan</strong></p><p>IDR 40.000</p><a href="https://t.me/OwnTelegramX" class="button">Beli</a></div>
                 <div class="price-item"><p><strong>Harga 5 Bulan</strong></p><p>IDR 50.000</p><a href="https://t.me/OwnTelegramX" class="button">Beli</a></div>
-                <div class="price-item"><p><strong>Harga 6 Bulan</strong></p><p>IDR 60.000</p><a href="https://t.me/OwnTelegramX" class="button">Beli</a></div>
-                <div class="price-item"><p><strong>Harga 7 Bulan</strong></p><p>IDR 70.000</p><a href="https://t.me/OwnTelegramX" class="button">Beli</a></div>
-                <div class="price-item"><p><strong>Harga 8 Bulan</strong></p><p>IDR 80.000</p><a href="https://t.me/OwnTelegramX" class="button">Beli</a></div>
-                <div class="price-item"><p><strong>Harga 9 Bulan</strong></p><p>IDR 90.000</p><a href="https://t.me/OwnTelegramX" class="button">Beli</a></div>
-                <div class="price-item"><p><strong>Harga 10 Bulan</strong></p><p>IDR 100.000</p><a href="https://t.me/OwnTelegramX" class="button">Beli</a></div>
             </div>
         </div>
+
+        <!-- Logo Telegram di Kanan -->
+        <div class="logo-container">
+            <div class="circle-loader"></div>
+            <a href="https://t.me/OwnTelegramX" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+            </a>
+        </div>
+
     </div>
 
     <script>
