--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Harga Accel UserBot</title>
     <style>
-        /* Gaya Umum */
+        /* RESET */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -42,7 +48,7 @@
             100% { transform: rotate(360deg); }
         }
 
-        /* Konten utama */
+        /* Konten utama (tersembunyi dulu) */
         .container {
             background: white;
             padding: 20px;
@@ -51,36 +57,14 @@
             max-width: 500px;
             margin: auto;
             display: none;
-            position: relative;
         }
 
         h1 {
             color: #007bff;
             font-size: 24px;
+            margin-bottom: 10px;
         }
 
-        /* Sosial Media */
-        .social-icons {
-            position: absolute;
-            left: -70px;
-            top: 50%;
-            transform: translateY(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .social-icons a img {
-            width: 40px;
-            height: 40px;
-            transition: transform 0.3s ease;
-        }
-
-        .social-icons a img:hover {
-            transform: scale(1.2);
-        }
-
-        /* Harga List */
         .price-list {
             text-align: left;
             margin-top: 20px;
@@ -100,87 +84,102 @@
             color: #333;
         }
 
-        .button {
-            display: block;
-            padding: 10px;
-            background: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            text-align: center;
-            margin-top: 10px;
-            transition: 0.3s;
-        }
-
-        .button:hover {
-            background: #0056b3;
-        }
-
-        /* Menu Navigasi */
-        .menu-icon {
+        /* Logo Instagram dan Telegram */
+        .social-icons {
             position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
+            top: 50%;
+            left: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            transform: translateY(-50%);
         }
 
-        .menu-bar {
+        .social-icons a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            animation: spin 2s infinite linear;
+        }
+
+        .social-icons img {
+            width: 30px;
+            height: 30px;
+        }
+
+        /* Hamburger Menu */
+        .hamburger {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            cursor: pointer;
+            z-index: 1000;
+        }
+
+        .bar {
             width: 30px;
             height: 5px;
-            background: #007bff;
+            background-color: #333;
             margin: 6px 0;
-            border-radius: 5px;
+            transition: 0.4s;
         }
 
-        .menu {
-            display: none;
-            position: absolute;
-            top: 40px;
-            right: 10px;
+        /* Sidebar Menu */
+        .sidebar {
+            position: fixed;
+            top: 0;
+            right: -300px;
+            width: 250px;
+            height: 100%;
             background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            width: 200px;
+            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+            transition: 0.5s;
+            padding: 20px;
             text-align: left;
         }
 
-        .menu a {
+        .sidebar a {
             display: block;
             padding: 10px;
-            text-decoration: none;
-            color: #333;
-            transition: 0.3s;
-        }
-
-        .menu a:hover {
+            margin: 10px 0;
             background: #007bff;
             color: white;
-        }
-
-        /* Popup */
-        .popup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-decoration: none;
+            border-radius: 5px;
             text-align: center;
         }
 
-        .popup img {
-            width: 80px;
-            margin: 10px;
+        .sidebar a:hover {
+            background: #0056b3;
         }
 
-        .close-btn {
-            display: block;
-            margin-top: 10px;
-            cursor: pointer;
-            color: red;
+        /* Payment Section */
+        .payment {
+            display: none;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .payment img {
+            width: 80px;
+            margin: 10px;
+            display: inline-block;
+        }
+
+        /* Data Diri */
+        .profile {
+            display: none;
+            text-align: center;
+            margin-top: 20px;
+            padding: 10px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
@@ -194,63 +193,50 @@
     <!-- Konten Website -->
     <div class="container" id="content">
         <h1>Daftar Harga Accel UserBot</h1>
-
-        <!-- Ikon Sosial Media -->
-        <div class="social-icons">
-            <a href="https://instagram.com/accelgyz"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
-            <a href="https://t.me/OwnTelegramX"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram"></a>
-        </div>
-
-        <!-- Daftar Harga -->
         <div class="price-list">
-            <div class="price-item"><p><strong>Harga 1 Bulan</strong> - IDR 10.000</p></div>
-            <div class="price-item"><p><strong>Harga 2 Bulan</strong> - IDR 20.000</p></div>
-            <div class="price-item"><p><strong>Harga 3 Bulan</strong> - IDR 30.000</p></div>
-            <div class="price-item"><p><strong>Harga 4 Bulan</strong> - IDR 40.000</p></div>
-        </div>
-
-        <!-- Menu Navigasi -->
-        <div class="menu-icon" onclick="toggleMenu()">
-            <div class="menu-bar"></div>
-            <div class="menu-bar"></div>
-            <div class="menu-bar"></div>
-        </div>
-
-        <div class="menu" id="menu">
-            <a href="#" onclick="showPopup('payment')">Payment</a>
-            <a href="#" onclick="showPopup('data')">Data Diri</a>
-            <a href="#" onclick="location.reload()">Dashboard</a>
+            <!-- Tambahkan 10 daftar harga -->
+            <div class="price-item"><p><strong>Harga 1 Bulan</strong></p><p>IDR 10.000</p></div>
+            <div class="price-item"><p><strong>Harga 2 Bulan</strong></p><p>IDR 20.000</p></div>
+            <div class="price-item"><p><strong>Harga 3 Bulan</strong></p><p>IDR 30.000</p></div>
+            <div class="price-item"><p><strong>Harga 4 Bulan</strong></p><p>IDR 40.000</p></div>
+            <div class="price-item"><p><strong>Harga 5 Bulan</strong></p><p>IDR 50.000</p></div>
         </div>
     </div>
 
-    <!-- Popup -->
-    <div class="popup" id="popup">
-        <p id="popup-text"></p>
-        <div id="popup-content"></div>
-        <span class="close-btn" onclick="closePopup()">Tutup</span>
+    <!-- Logo Instagram & Telegram -->
+    <div class="social-icons">
+        <a href="https://instagram.com/accelgyz"><img src="instagram.png"></a>
+        <a href="https://t.me/OwnTelegramX"><img src="telegram.png"></a>
+    </div>
+
+    <!-- Hamburger Menu -->
+    <div class="hamburger" onclick="toggleSidebar()">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+
+    <!-- Sidebar Menu -->
+    <div class="sidebar" id="sidebar">
+        <a href="#" onclick="showPayment()">Payment</a>
+        <a href="#" onclick="showProfile()">Data Diri</a>
+        <a href="#" onclick="hideSidebar()">Dashboard</a>
     </div>
 
     <script>
-        function toggleMenu() {
-            document.getElementById("menu").style.display = 
-                document.getElementById("menu").style.display === "block" ? "none" : "block";
+        window.onload = function() {
+            setTimeout(function() {
+                document.getElementById("loading").style.display = "none";
+                document.getElementById("content").style.display = "block";
+            }, 4000);
+        };
+
+        function toggleSidebar() {
+            document.getElementById("sidebar").style.right = "0";
         }
 
-        function showPopup(type) {
-            let text = "", content = "";
-            if (type === "payment") {
-                text = "BERIKUT ADALAH DAFTAR PAYMENT ADMIN";
-                content = "<img src='qris.png'><img src='dana.png'><img src='ovo.png'><img src='gopay.png'>";
-            } else if (type === "data") {
-                text = "Halo, saya Ovan Sev Farel Sirait...";
-            }
-            document.getElementById("popup-text").innerHTML = text;
-            document.getElementById("popup-content").innerHTML = content;
-            document.getElementById("popup").style.display = "block";
-        }
-
-        function closePopup() {
-            document.getElementById("popup").style.display = "none";
+        function hideSidebar() {
+            document.getElementById("sidebar").style.right = "-300px";
         }
     </script>
 
