--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Harga Accel UserBot</title>
     <style>
-        /* RESET */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        
+        /* Gaya Dasar */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             text-align: center;
             padding: 50px;
             margin: 0;
+            position: relative;
         }
 
         /* Animasi Loading */
@@ -48,7 +43,7 @@
             100% { transform: rotate(360deg); }
         }
 
-        /* Konten utama (tersembunyi dulu) */
+        /* Konten utama */
         .container {
             background: white;
             padding: 20px;
@@ -78,108 +73,89 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        .price-item p {
-            margin: 0;
-            font-size: 18px;
-            color: #333;
-        }
-
-        /* Logo Instagram dan Telegram */
-        .social-icons {
-            position: absolute;
-            top: 50%;
-            left: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            transform: translateY(-50%);
-        }
-
-        .social-icons a {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            animation: spin 2s infinite linear;
-        }
-
-        .social-icons img {
-            width: 30px;
-            height: 30px;
-        }
-
-        /* Hamburger Menu */
-        .hamburger {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            cursor: pointer;
-            z-index: 1000;
-        }
-
-        .bar {
-            width: 30px;
-            height: 5px;
-            background-color: #333;
-            margin: 6px 0;
-            transition: 0.4s;
-        }
-
-        /* Sidebar Menu */
-        .sidebar {
-            position: fixed;
-            top: 0;
-            right: -300px;
-            width: 250px;
-            height: 100%;
-            background: white;
-            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
-            transition: 0.5s;
-            padding: 20px;
-            text-align: left;
-        }
-
-        .sidebar a {
+        .button {
             display: block;
             padding: 10px;
-            margin: 10px 0;
             background: #007bff;
             color: white;
             text-decoration: none;
             border-radius: 5px;
             text-align: center;
+            margin-top: 10px;
+            transition: 0.3s;
         }
 
-        .sidebar a:hover {
+        .button:hover {
             background: #0056b3;
         }
 
-        /* Payment Section */
-        .payment {
-            display: none;
-            text-align: center;
-            margin-top: 20px;
+        /* Logo Instagram & Telegram */
+        .social-icons {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
         }
 
-        .payment img {
-            width: 80px;
-            margin: 10px;
-            display: inline-block;
+        .social-icons a {
+            display: block;
+            margin-bottom: 10px;
         }
 
-        /* Data Diri */
-        .profile {
+        .social-icons img {
+            width: 40px;
+            height: 40px;
+            animation: spin 3s linear infinite;
+        }
+
+        /* Menu Navigasi */
+        .menu-icon {
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            font-size: 30px;
+            cursor: pointer;
+        }
+
+        .menu {
             display: none;
-            text-align: center;
-            margin-top: 20px;
-            padding: 10px;
+            position: fixed;
+            top: 50px;
+            right: 20px;
             background: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+            width: 200px;
+        }
+
+        .menu div {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+            cursor: pointer;
+            text-align: left;
+        }
+
+        .menu div:hover {
+            background: #f1f1f1;
+        }
+
+        /* Tampilan Menu yang Muncul */
+        .submenu {
+            display: none;
+            padding: 20px;
+            background: white;
+            text-align: center;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            margin: 20px auto;
+        }
+
+        .payment-icons img {
+            width: 60px;
+            height: 30px;
+            margin: 10px;
+            animation: spin 2s linear infinite;
         }
     </style>
 </head>
@@ -190,11 +166,25 @@
         <div class="loading-spinner"></div>
     </div>
 
+    <!-- Logo Instagram & Telegram -->
+    <div class="social-icons">
+        <a href="https://instagram.com/accelgyz"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
+        <a href="https://t.me/OwnTelegramX"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram"></a>
+    </div>
+
+    <!-- Menu Navigasi -->
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    <div class="menu" id="menu">
+        <div onclick="showSubmenu('payment')">Payment</div>
+        <div onclick="showSubmenu('dataDiri')">Data Diri</div>
+        <div onclick="location.reload()">Dashboard</div>
+    </div>
+
     <!-- Konten Website -->
     <div class="container" id="content">
         <h1>Daftar Harga Accel UserBot</h1>
         <div class="price-list">
-            <!-- Tambahkan 10 daftar harga -->
+            <!-- 10 Harga -->
             <div class="price-item"><p><strong>Harga 1 Bulan</strong></p><p>IDR 10.000</p></div>
             <div class="price-item"><p><strong>Harga 2 Bulan</strong></p><p>IDR 20.000</p></div>
             <div class="price-item"><p><strong>Harga 3 Bulan</strong></p><p>IDR 30.000</p></div>
@@ -203,42 +193,36 @@
         </div>
     </div>
 
-    <!-- Logo Instagram & Telegram -->
-    <div class="social-icons">
-        <a href="https://instagram.com/accelgyz"><img src="instagram.png"></a>
-        <a href="https://t.me/OwnTelegramX"><img src="telegram.png"></a>
+    <!-- Submenu -->
+    <div class="submenu" id="payment">
+        <h2>BERIKUT DAFTAR PAYMENT PEMBELIAN</h2>
+        <div class="payment-icons">
+            <img src="qris.png" alt="QRIS">
+            <img src="dana.png" alt="DANA">
+            <img src="ovo.png" alt="OVO">
+            <img src="gopay.png" alt="GOPAY">
+        </div>
     </div>
 
-    <!-- Hamburger Menu -->
-    <div class="hamburger" onclick="toggleSidebar()">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-    </div>
-
-    <!-- Sidebar Menu -->
-    <div class="sidebar" id="sidebar">
-        <a href="#" onclick="showPayment()">Payment</a>
-        <a href="#" onclick="showProfile()">Data Diri</a>
-        <a href="#" onclick="hideSidebar()">Dashboard</a>
+    <div class="submenu" id="dataDiri">
+        <p>Halo, saya Ovan Sev Farel Sirait...</p>
     </div>
 
     <script>
-        window.onload = function() {
-            setTimeout(function() {
-                document.getElementById("loading").style.display = "none";
-                document.getElementById("content").style.display = "block";
-            }, 4000);
-        };
+        setTimeout(() => {
+            document.getElementById("loading").style.display = "none";
+            document.getElementById("content").style.display = "block";
+        }, 4000);
 
-        function toggleSidebar() {
-            document.getElementById("sidebar").style.right = "0";
+        function toggleMenu() {
+            document.getElementById("menu").classList.toggle("show");
         }
 
-        function hideSidebar() {
-            document.getElementById("sidebar").style.right = "-300px";
+        function showSubmenu(id) {
+            document.querySelectorAll('.submenu').forEach(el => el.style.display = 'none');
+            document.getElementById(id).style.display = 'block';
         }
     </script>
 
 </body>
-</html>
+<
