--- a/index.html
+++ b/index.html
@@ -92,21 +92,6 @@
             margin-top: 10px;
         }
 
-        /* Hamburger Menu */
-        .hamburger {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            cursor: pointer;
-        }
-
-        .bar {
-            width: 30px;
-            height: 5px;
-            background-color: #333;
-            margin: 6px 0;
-        }
-
         /* Sidebar */
         .sidebar {
             position: fixed;
@@ -154,7 +139,7 @@
 
         .close-btn {
             margin-top: 20px;
-            padding: 10px 20px;
+            padding: 10px;
             background: red;
             color: white;
             border: none;
@@ -184,13 +169,6 @@
             <p>IDR 20.000</p>
             <a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a>
         </div>
-    </div>
-
-    <!-- Hamburger Menu -->
-    <div class="hamburger" onclick="toggleSidebar()">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
     </div>
 
     <!-- Sidebar -->
